--- a/CYK-Finals-Draft.ipynb
+++ b/CYK-Finals-Draft.ipynb
@@ -327,18 +327,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "29e3afe1-4f21-4816-969d-4a1166b652b6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.13.0' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is the sentence valid? Yes\n",
+      "\n",
+      "CYK Table:\n",
+      "[{'Det'}, {'NP'}, set(), set(), {'S'}]\n",
+      "['', {'N'}, set(), set(), set()]\n",
+      "['', '', {'V'}, set(), {'VP'}]\n",
+      "['', '', '', {'Det'}, {'NP'}]\n",
+      "['', '', '', '', {'N'}]\n"
      ]
     }
    ],
