Convert CFG to CNF Done

--- a/CYK-Finals-Draft.ipynb
+++ b/CYK-Finals-Draft.ipynb
@@ -299,7 +299,122 @@
     "\n",
     "CNF imposes a strict structure on grammar rules, allowing each rule to follow a specific and limited format. This structure eliminates irregularities that would otherwise complicate parsing.\n",
     "\n",
-    "By converting a grammar into CNF, we ensure that every rule fits into a form that a parser like CYK can systematically handle. Instead of dealing with varied rule lengths or mixed symbol types, the parser only needs to process two types of rules: **binary combinations** or **single terminals**. This standardization simplifies the parsing process and improves performance."
+    "By converting a grammar into CNF, we ensure that every rule fits into a form that a parser like CYK can systematically handle. Instead of dealing with varied rule lengths or mixed symbol types, the parser only needs to process two types of rules: **binary combinations** or **single terminals**. This standardization simplifies the parsing process and improves performance.\n",
+    "\n",
+    "**Key Properties of CNF**\n",
+    "\n",
+    "1. CFGs can be converted into different equivalent CNF forms.\n",
+    "1. The same language can be produce by CNF as the orginal CFG\n",
+    "1. Parsing algorithms commonly used in CNF algorithms like:\n",
+    "    * CYK algorithm for shopping membership checking\n",
+    "    * Compilers that uses bottom-up parsers\n",
+    "1. A string that have the length of n, CNF derivation requires at most $2n-1$ derivation steps\n",
+    "1. Any cfg that does not generate ϵ has an equivalent CNF\n",
+    "\n",
+    "#### Conversion of CFG to CNF\n",
+    "\n",
+    "Think of CNF as a more simply version of a context-free grammar(CFGs) which gives all productions rules to follow a specific pattern. In CNF, thoses rules either have **two non-terminal** symbols, or a **single terminal symbol**. In some cases, an empty string. Converting CFG into CNF is a crucial step in parsing algorithms, like the CYK algorithm, which helps in understanding each language strucuture.\n",
+    "\n",
+    "#### Ex. Converting CFG to CNF\n",
+    "\n",
+    "Visualize this, let us have a given CFG first as G1:\n",
+    "$$ S\\rightarrow\\; ASB$$\n",
+    "$$ A\\rightarrow\\; aAS \\;|\\; a\\;|\\;ε $$\n",
+    "$$ B\\rightarrow\\; SbS\\; | \\; A\\; | \\; bb $$\n",
+    "\n",
+    "Step 1.\n",
+    "\n",
+    "Start with symbol $S$ first as it appears on the RHS which will create a new production rule $S0\\rightarrow S$. Which the grammar will become like this:\n",
+    "$$S0\\rightarrow S$$\n",
+    "$$ S\\rightarrow\\; ASB$$\n",
+    "$$ A\\rightarrow\\; aAS \\;|\\; a\\;|\\;ε $$\n",
+    "$$ B\\rightarrow\\; SbS\\; | \\; A\\; | \\; bb $$\n",
+    "\n",
+    "Step 2.\n",
+    "\n",
+    "If a grammar contains a null production $A \\rightarrow ε$, the grammar will become:\n",
+    "$$ S0 \\rightarrow S$$\n",
+    "$$ S\\rightarrow\\; ASB\\; |\\; SB$$\n",
+    "$$  A\\rightarrow\\; a \\;|\\; aAS\\;|\\;aS  $$ \n",
+    "$$ B\\rightarrow\\; SbS\\; | \\; A\\; |\\;ε\\; |\\; bb $$\n",
+    "\n",
+    "Which then will create a null production of $B\\rightarrow \\; ε$, and its removal will result to:\n",
+    "\n",
+    "$$ S0 \\rightarrow S$$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; S\\; |\\; ASB\\; | \\; SB$$\n",
+    "$$  A\\rightarrow\\; a \\;|\\; aAS\\;|\\;aS  $$\n",
+    "$$ B\\rightarrow\\; SbS\\; | \\; A\\;  |\\; bb $$ \n",
+    "\n",
+    "After that, it will yield an unit production of $B \\rightarrow A$ and its removal will result to:\n",
+    "\n",
+    "$$ S0 \\rightarrow S$$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; ASB\\; |\\; SB\\; | \\; S$$\n",
+    "$$  A\\rightarrow\\; a \\;|\\; aAS\\;|\\;aS  $$\n",
+    "$$ B\\rightarrow\\; SbS\\; | \\;bb\\;  |\\; aAS\\; |\\; aS\\; |\\; a $$ \n",
+    "\n",
+    "next will be the removal of the unit production of $ S0 \\rightarrow S$ which will result to a grammar that looks like:\n",
+    "\n",
+    "$$ S0 \\rightarrow AS\\; |\\; ASB\\; |\\; SB\\; |\\; S$$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; ASB\\; |\\; SB\\; |\\; S$$\n",
+    "$$  A\\rightarrow\\; aAS \\;|\\; aS\\;|\\;a  $$\n",
+    "$$ B\\rightarrow\\; SbS\\; | \\;bb\\;  |\\; aAS\\; |\\; aS\\; |\\; a $$ \n",
+    "\n",
+    "lastly, we can remove the unit production $S\\rightarrow S$ and $S0\\rightarrow S$ from the grammar which will give us:\n",
+    "\n",
+    "$$ S0 \\rightarrow AS\\; |\\; ASB\\; |\\; SB$$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; ASB\\; | \\; SB$$\n",
+    "$$  A\\rightarrow\\; aAS \\;|\\; aS\\;|\\;a  $$\n",
+    "$$ B\\rightarrow\\; SbS\\; | \\;bb\\;  |\\; aAS\\; |\\; aS\\; |\\; a $$ \n",
+    "\n",
+    "Step 3.\n",
+    "\n",
+    "In producction rule $A\\rightarrow\\; aAS\\; |\\; aS\\; and\\; B\\rightarrow\\;  SbS\\;  |\\;  aAS\\; |\\; aS$, the terminal a and b exist on RHS with non-terminates. Remove them from RHS:\n",
+    "$$ S0\\rightarrow\\; AS\\; |\\; ASB\\; |\\; SB $$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; ASB\\; |\\; SB $$\n",
+    "$$ A\\rightarrow\\; XAS\\; |\\; XS\\; |a $$\n",
+    "$$ B\\rightarrow\\; SYS\\; |\\; bb\\; |\\; XAS\\; |\\; XS\\; |\\; a $$\n",
+    "$$ X\\rightarrow a $$\n",
+    "$$ Y\\rightarrow b $$\n",
+    "\n",
+    "and since $ B\\rightarrow\\; bb $ cannot be part of CNF, removing it should give a grammar:\n",
+    "$$ S0\\rightarrow\\; AS\\; |\\; ASB\\; |\\; SB $$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; ASB\\; |\\; SB $$\n",
+    "$$ A\\rightarrow\\; XAS\\; |\\; XS\\; |a $$\n",
+    "$$ B\\rightarrow\\; SYS\\; |\\; YY\\; |\\; XAS\\; |\\; XS\\; |\\; a $$\n",
+    "$$ X\\rightarrow a $$\n",
+    "$$ Y\\rightarrow b $$\n",
+    "\n",
+    "Step 4.\n",
+    "\n",
+    "In production rule $ S0\\rightarrow ASB$, $ S\\rightarrow ASB $, RHS has more than two symboles, removing them should yield a grammar:\n",
+    "$$ S0\\rightarrow\\; AS\\; |\\; PB\\; |\\; SB $$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; PB\\; |\\; SB $$\n",
+    "$$ A\\rightarrow\\; XAS\\; |\\; XS\\; |a $$\n",
+    "$$ B\\rightarrow\\; SYS\\; |\\; YY\\; |\\; XAS\\; |\\; XS\\; |\\; a $$\n",
+    "$$ X\\rightarrow\\; a $$\n",
+    "$$ Y\\rightarrow\\; b $$\n",
+    "$$ P\\rightarrow\\; AS $$\n",
+    "\n",
+    "Since, $ A\\rightarrow XAS$ has more than two symbols, remove it from grammar:\n",
+    "$$ S0\\rightarrow\\; AS\\; |\\; PB\\; |\\; SB $$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; PB\\; |\\; SB $$\n",
+    "$$ A\\rightarrow\\; RS\\; |\\; XS\\; |\\; a $$\n",
+    "$$ B\\rightarrow\\; SYS\\; |\\; YY\\; |\\; RS\\; |\\; XS\\; |\\; a $$\n",
+    "$$ X\\rightarrow\\; a $$\n",
+    "$$ Y\\rightarrow\\; b $$\n",
+    "$$ P\\rightarrow\\; AS $$\n",
+    "$$ R\\rightarrow\\; XA $$\n",
+    "\n",
+    "Lastly, we also do this for the rule of $ B\\rightarrow SYS$ since it has more than two symbols, we remove it from the grammar:\n",
+    "$$ S0\\rightarrow\\; AS\\; |\\; PB\\; |\\; SB $$\n",
+    "$$ S\\rightarrow\\; AS\\; |\\; PB\\; |\\; SB $$\n",
+    "$$ A\\rightarrow\\; RS\\; |\\; XS\\; |a $$\n",
+    "$$ B\\rightarrow\\; TS\\; |\\; YY\\; |\\; RS\\; |\\; XS\\; |a $$\n",
+    "$$ X\\rightarrow\\; a $$\n",
+    "$$ Y\\rightarrow\\; b $$\n",
+    "$$ P\\rightarrow\\; AS $$\n",
+    "$$ R\\rightarrow\\; XA $$\n",
+    "$$ T\\rightarrow\\; SY $$\n"
    ]
   },
   {
