--- a/CYK-Finals-Draft.ipynb
+++ b/CYK-Finals-Draft.ipynb
@@ -5,8 +5,8 @@
    "id": "1a5108ff",
    "metadata": {},
    "source": [
-    "### Author: Premdiles, Marius A.\n",
-    "### Updated: 07/04/2025"
+    "### Author: LT 16-17\n",
+    "### 07/16/2025"
    ]
   },
   {
