Fixed the preface part

--- a/CYK-Finals-Draft.ipynb
+++ b/CYK-Finals-Draft.ipynb
@@ -34,12 +34,10 @@
     "1. It used Chomsky's Normal Form which helps solves word problems for context-free grammars(CFG).\n",
     "1. Mostly seen in reecursive algorithms to make it more efficient by storing values of intermediate calculations.  \n",
     "1. Widely used in almost every artificial intellige\n",
-    "1. It shows up in a LOT of job interviews.\n",
     "\n",
-    "Regarding the last point, I will clarify that it is entirely possible you will take a job with programming and *never* use dynamic programming.  \n",
-    "You *might* if you go to a big tech company, do operations research, or something similar.  \n",
-    "But it shows up in technical interviews, particularly for top-level jobs, because it's a very good litmus test.  \n",
-    "If you understand dynamic programming, you almost certainly know all of data structures and algorithms and (more importantly) how to apply them to a job.  "
+    "Grammar is used in our everyday lives, you may not see or recoginize it but it is needed in everyday communication.\n",
+    "Communication is one of the foundations of our lives and in the field of work. \n",
+    "This can also be seen in programing as well as coding and knowing the true concept of grammar can very well tell the difference between a beginner programmer and an amateur programmer.  "
    ]
   },
   {
